--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,11 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+//Sass
+body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
