--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,5 +12,11 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    div{
+       display: flex;
+       flex-direction: column; 
+    }
 }
+
+
 
