--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,13 +8,52 @@
 @import '~bootstrap/scss/bootstrap';
 
 //Sass
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    div{
-       display: flex;
-       flex-direction: column; 
+    height: 100%;
+    width: 100vw;
+    header{
+        width: 80%;
+        flex-basis: 10%;
+        ul{
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-evenly;
+            li{
+                width: 15%;
+            } 
+         }
+    }
+    main{
+        width: 80%;
+        flex-basis: 70%; 
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;   
+        table{
+            width: 100%;
+            height: 100%;
+            .id{
+                width: 5%;
+            }
+            .title{
+                width: 15%;
+            }
+            .body{
+                width: 60%;
+            }
+            .created{
+                width: 20%;
+            }
+        }
     }
 }
 
