--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,12 +1,6 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 
-// Variables
-@import 'variables';
-
-// Bootstrap
-@import '~bootstrap/scss/bootstrap';
-
 //Sass
 *{
     margin: 0;
@@ -14,6 +8,7 @@
     box-sizing: border-box;
 }
 body{
+    font-family: 'nunito','sanserif';
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -37,22 +32,73 @@ body{
         flex-basis: 70%; 
         display: flex;
         flex-direction: column;
-        justify-content: space-evenly;   
+        justify-content: space-evenly; 
+        h1{
+            padding: 20px;
+        }  
         table{
             width: 100%;
             height: 100%;
+            tr{
+                width: 100%;
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+                
+            }
             .id{
-                width: 5%;
+                width: 2%;
+
             }
             .title{
-                width: 15%;
+                width: 10%;
+                padding: 10px;
             }
             .body{
-                width: 60%;
+                width: 55%;
+                padding: 10px;
             }
             .created{
-                width: 20%;
+                width: 15%;
+                padding: 10px;
             }
+            .action{
+                width: 18%;
+                padding: 10px;
+                display: flex;
+                justify-content: space-around;
+                button{
+                    padding: 8px;
+                }
+            }
+        }
+        form{
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            height: 100%;
+            justify-content: space-around;
+            label{
+                margin: 20px;
+                font-size: 2rem;
+            }
+            #input_title{
+                width: 30%;
+                margin-top: 10px;
+                margin-bottom: 40px;
+                padding: 20px;   
+            }
+            #input_body{
+                width: 80%;
+                height: 100px;
+                margin-top: 10px;
+                margin-bottom: 40px;
+                padding: 20px;   
+            }
+        }
+        #create_btn{
+                
+            padding: 10px;
         }
     }
 }
