added edit page and edit-update method

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -97,7 +97,7 @@ body{
             }
         }
         #create_btn{
-                
+            width: 20%;   
             padding: 10px;
         }
     }
