--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -55,11 +55,15 @@ body{
                 padding: 10px;
             }
             .body{
-                width: 55%;
+                width: 50%;
                 padding: 10px;
             }
             .created{
-                width: 15%;
+                width: 10%;
+                padding: 10px;
+            }
+            .created{
+                width: 10%;
                 padding: 10px;
             }
             .action{
@@ -69,6 +73,9 @@ body{
                 justify-content: space-around;
                 button{
                     padding: 8px;
+                }
+                form{
+                    width: 25%;
                 }
             }
         }
